--- a/style.css
+++ b/style.css
@@ -201,6 +201,23 @@ main {
   top: 24px;
   overflow: hidden;
 }
+.right-section .side-image {
+  position: relative;
+}
+
+.right-section .side-image::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 70%; /* hauteur du dégradé */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.4), transparent);
+  pointer-events: none;
+  border-radius: 10px;
+  z-index: 1;
+}
+
 
 /* LEFT: background image en bas + dégradé vers le haut pour fusionner avec le blanc */
 .left-section {
